Changed working dir to working csv imports for auto working...

--- a/R Files/Data Analysis Markdown.Rmd
+++ b/R Files/Data Analysis Markdown.Rmd
@@ -22,72 +22,77 @@ library(tidyverse)
 
 #### Set Up Work Directory Enviornment ####
 
-setwd("~/Nissan/data")
 
+AISRSA <- read.csv('https://raw.githubusercontent.com/ttownsley/Research-Methods-Automotive/master/Data%20Sets/AISRSA.csv')
+
+
+library(readr)
+data <- read_csv("https://raw.githubusercontent.com/ttownsley/Research-Methods-Automotive/master/Data%20Sets/AISRSA.csv")
 #### Import Data ####
 
 # Automobile Inventory Sales Ratio (in ______), Seasonally Adjusted
-aisrsa = 
-  read.csv("~/Nissan/data/AISRSA.csv")
+aisrsa <- 
+  read.csv('https://raw.githubusercontent.com/ttownsley/Research-Methods-Automotive/master/Data%20Sets/AISRSA.csv')
 
 # Domestic Automobile Inventories (in _____), Seasonally Adjusted
-auinsa =
-  read.csv("~/Nissan/data/AUINSA.csv")
+auinsa <- 
+  read.csv('https://raw.githubusercontent.com/ttownsley/Research-Methods-Automotive/master/Data%20Sets/AUINSA.csv')
 
 # Domestic Automobile Production (in _____), Seasonally Adjusted
-daupsa = 
-  read.csv("~/Nissan/data/DAUPSA.csv")
+daupsa <- 
+  read.csv('https://raw.githubusercontent.com/ttownsley/Research-Methods-Automotive/master/Data%20Sets/DAUPSA.csv')
 
 # Domestic Automobile Production (in _____), Not DSeasonally Adjusted
-daupnsa = 
-  read.csv("~/Nissan/data/DAUPNSA.csv")
+daupnsa <- 
+  read.csv('https://raw.githubusercontent.com/ttownsley/Research-Methods-Automotive/master/Data%20Sets/DAUPNSA.csv')
 
 # Mexican Automobile Imports (in thousands), Seasonally Adjusted
-mauisa = 
-  read.csv("~/Nissan/data/MAUISA.csv")
+mauisa <- 
+  read.csv('https://raw.githubusercontent.com/ttownsley/Research-Methods-Automotive/master/Data%20Sets/MAUISA.csv')
 
 # Mexican Automobile Imports (in thousands), Not Seasonally Adjusted
-mauinsa = 
-  read.csv("~/Nissan/data/MAUINSA.csv")
+mauinsa <- 
+  read.csv('https://raw.githubusercontent.com/ttownsley/Research-Methods-Automotive/master/Data%20Sets/MAUINSA.csv')
 
 # Domestic Motor Vehicle Retail Sales ( in ____), Seasonally Adjusted
-mauinsa = 
-  read.csv("~/Nissan/data/DAUTOSA.csv")
+mauinsa <- 
+  read.csv('https://raw.githubusercontent.com/ttownsley/Research-Methods-Automotive/master/Data%20Sets/DAUTOSA.csv')
+  
 # Domestic Motor Vehicle Retail Sales ( in ____), Not Seasonally Adjusted
-dautonsa = 
-  read.csv("~/Nissan/data/DAUTONSA.csv")
+dautonsa <- 
+  read.csv('https://raw.githubusercontent.com/ttownsley/Research-Methods-Automotive/master/Data%20Sets/DAUTONSA.csv')
 
 # Industrial Production Index & Vehicle Parts
-ipd = 
-  read.csv("~/Nissan/data/IPD.csv")
+ipd <- 
+  read.csv('https://raw.githubusercontent.com/ttownsley/Research-Methods-Automotive/master/Data%20Sets/IPD.csv')
 
 # Domestic & Foreign Motor Vehicle Retail Sales (in ____), Not Seasonally Adjusted
-lautonsa  = 
-  read.csv("~/Nissan/data/LAUTONSA.csv")
+lautonsa  <- 
+  read.csv('https://raw.githubusercontent.com/ttownsley/Research-Methods-Automotive/master/Data%20Sets/LAUTONSA.csv')
 
 # Motor Vehicle Retail Sales, Foreign Autos (in thousands), Seasonally Adjusted
-fautosa = 
-  read.csv("~/Nissan/data/FAUTOSA.csv")
+fautosa <- 
+  read.csv('https://raw.githubusercontent.com/ttownsley/Research-Methods-Automotive/master/Data%20Sets/FAUTOSA.csv')
 
 # Motor Vehicle Retail Sales, Foreign Autos (in thousands), Not Seasonally Adjusted
-fautonsa= 
-  read.csv("~/Nissan/data/FAUTONSA.csv")
+fautonsa <- 
+  read.csv('https://raw.githubusercontent.com/ttownsley/Research-Methods-Automotive/master/Data%20Sets/FAUTONSA.csv')
 
 # Retail Sales Used Car Dealers
-mrtss = 
-  read.csv("~/Nissan/data/MRTSS.csv")
+mrtss <- 
+  read.csv('https://raw.githubusercontent.com/ttownsley/Research-Methods-Automotive/master/Data%20Sets/MRTSS.csv')
 
 # Total Industry Car Sales (in ), Seasonally Adjusted
-totalsa = 
-  read.csv("~/Nissan/data/TOTALSA.csv")
+totalsa <- 
+  read.csv('https://raw.githubusercontent.com/ttownsley/Research-Methods-Automotive/master/Data%20Sets/TOTALSA.csv')
 
 # Total Industry Car Sales (in ), Not Seasonally Adjusted
-totalnsa = 
-  read.csv("~/Nissan/data/TOTALNSA.csv")
+totalnsa <- 
+  read.csv('https://raw.githubusercontent.com/ttownsley/Research-Methods-Automotive/master/Data%20Sets/TOTALNSA.csv')
 
 # Advance Retail Sales of Vehicle Parts Dealers (in millions)
-rsmvpd = 
-  read.csv("~/Nissan/data/RSMVPD.csv")
+rsmvpd <- 
+  read.csv('https://raw.githubusercontent.com/ttownsley/Research-Methods-Automotive/master/Data%20Sets/RSMVPD.csv')
 
 cbind(aisrsa, auinsa)
 
@@ -101,11 +106,9 @@ Looking first as at plots of Total Industry Car Sales, Seasonally Adjusted:
 ```{r cars sales, echo=FALSE}
 ### Exploratory Analysis ###
 
-TotalSA <- read.csv("TOTALSA.csv", header = TRUE)
-
 ## creates time series object from data sets ## see https://otexts.com/fpp2/ts-objects.html
 
-timeSA <- ts(TotalSA, frequency = 12,  start = c(1976, 1))
+timeSA <- ts(totalsa, frequency = 12,  start = c(1976, 1))
 plot(timeSA)
 
 
